Add some dialogs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-wire:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.koushikdutta.async:androidasync:2.1.7'
+    compile 'com.afollestad.material-dialogs:core:0.8.5.9'
     compile 'com.android.support:support-v4:23.4.0'
 }
